# mostly-python

./: .gitignore  .pre-commit-config.yaml  .public  .travis.yml  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  scratch.ipynb  setup.py  sitemap.xml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint-check.yaml  run-tests.yaml  workflow.yml
api_client/: index.html
api_domain/: index.html
api_reference/api/: index.html
api_reference/exceptions/: index.html
api_reference/model/: index.html
changelog/: index.html
custom_template/pydantic_v2/: BaseModel.jinja2
dev/: README.md  connector.ipynb  connectors.ipynb  draft.ipynb  generators.ipynb  sandbox.ipynb  sandbox.py
docs/: AccessType.md  AddressMockData.md  AwsS3StorageConnector.md  AzureStorageConnector.md  BankIbanMockData.md  BaseConnector.md  BaseDelivery.md  BaseGenerator.md  BaseSyntheticData.md  BigQueryConnector.md  Certificate.md  ConnectionFilterParameter.md  Connector.md  ConnectorApi.md  ConnectorId.md  ConstantMockData.md  CustomStringMockData.md  DataQAReport.md  DataQAReportId.md  DatabricksConnector.md  Delivery.md  DeliveryApi.md  DeliveryBody.md  DeliveryId.md  DeliveryTable.md  DeliveryTableId.md  EmailMockData.md  Figure.md  Figures.md  FileName.md  Generator.md  GeneratorApi.md  GeneratorFilterParameter.md  GeneratorId.md  GeneratorStatus.md  GeneratorsBody.md  GoogleCloudStorageConnector.md  Hostname.md  InlineResponse200.md  InlineResponse2001.md  (+57 more)
docs/api_reference/: api.md  exceptions.md  model.md
docs/home/: changelog.md  license.md
home/changelog/: index.html
home/license/: index.html
home/readme/: index.html
mostly_python_client/: api.py  base.py  model.py
mostlyai/: __init__.py  api.py  base.py  base_social.py  components.py  computes.py  connectors.py  domain.py  exceptions.py  generators.py  model.py  naming_conventions.py  shares.py  synthetic_datasets.py  utils.py
mostlyai/client/: __init__.py  _base_utils.py  _mostly_utils.py  _naming_conventions.py  api.py  base.py  connectors.py  domain.py  exceptions.py  generators.py  model.py  mostly_utils.py  naming_conventions.py  shares.py  synthetic_datasets.py  utils.py
search/: search_index.json
swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
swagger_client/api/: __init__.py  connector_api.py  delivery_api.py  generator_api.py  qa_report_api.py  synth_data_api.py
swagger_client/models/: __init__.py  access_type.py  address_mock_data.py  aws_s3_storage_connector.py  azure_storage_connector.py  bank_iban_mock_data.py  base_connector.py  base_delivery.py  base_generator.py  base_synthetic_data.py  big_query_connector.py  certificate.py  connection_filter_parameter.py  connector.py  connector_id.py  constant_mock_data.py  custom_string_mock_data.py  data_qa_report.py  data_qa_report_id.py  databricks_connector.py  delivery.py  delivery_body.py  delivery_id.py  delivery_table.py  delivery_table_id.py  email_mock_data.py  figure.py  figures.py  file_name.py  generator.py  generator_filter_parameter.py  generator_id.py  generator_status.py  generators_body.py  google_cloud_storage_connector.py  hostname.py  inline_response200.py  inline_response2001.py  inline_response2002.py  inline_response2003.py  (+46 more)
syntax/: index.html
test/: test_access_type.py  test_address_mock_data.py  test_aws_s3_storage_connector.py  test_azure_storage_connector.py  test_bank_iban_mock_data.py  test_base_connector.py  test_base_delivery.py  test_base_generator.py  test_base_synthetic_data.py  test_big_query_connector.py  test_certificate.py  test_connection_filter_parameter.py  test_connector.py  test_connector_api.py  test_connector_id.py  test_constant_mock_data.py  test_custom_string_mock_data.py  test_data_qa_report.py  test_data_qa_report_id.py  test_databricks_connector.py  test_delivery.py  test_delivery_api.py  test_delivery_body.py  test_delivery_id.py  test_delivery_table.py  test_delivery_table_id.py  test_email_mock_data.py  test_figure.py  test_figures.py  test_file_name.py  test_generator.py  test_generator_api.py  test_generator_filter_parameter.py  test_generator_id.py  test_generator_status.py  test_generators_body.py  test_google_cloud_storage_connector.py  test_hostname.py  test_inline_response200.py  test_inline_response2001.py  (+50 more)
tests/: __init__.py
tests/end_to_end/: end_to_end.py
tests/unit/: test_base.py  test_naming_conventions.py  test_utils.py
tools/: README.md  extend_model.py  model.py  postproc_model.py
tutorials/: index.html
usage/: index.html
(+15 files in other folders)
