[tool.poetry]
name = "mostlyai"
version = "0.4.2"
description = "The official Python client for the MOSTLY AI platform."
homepage = "https://app.mostly.ai/"
authors = ["MOSTLY AI <office@mostly.ai>"]
license = "Proprietary"
readme = "README.md"
packages = [
    { include = "mostlyai" }
]
exclude = ["tools/", "tools/**/*"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"
httpx = ">=0.25.0"
pandas = ">=1.5.3,<2.0.0 || ^2.0.0"
pyarrow = ">=14.0.0"
rich = ">=13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pre-commit = "^2.17.0"
datamodel-code-generator = { version = "^0.25.0", extras = ["http"] }
vcrpy = "^5.1.0"
ruff = "0.4.4"
respx = "^0.20.2"
twine = "^5.0.0"
commitizen = "^3.18.0"
mkdocs = "^1.5.3"
mkdocstrings = { version = "^0.24.1", extras = ["crystal", "python"] }
mkdocs-material = "^9.5.13"
poetry-bumpversion = "^0.3.2"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[[tool.poetry_bumpversion.replacements]]
files = ["mostlyai/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
