[tool.poetry]
name = "mostlyai"
version = "0.7.0"
description = "MOSTLY AI - Python Client"
homepage = "https://app.mostly.ai/"
license = "Apache-2.0"
authors = ["MOSTLY AI <dev@mostly.ai>"]
readme = "README.md"
packages = [
    { include = "mostlyai" }
]
exclude = ["tools/", "tools/**/*"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Homepage" = "https://app.mostly.ai/"
"Documentation" = "https://mostly-ai.github.io/mostlyai/"
"Source" = "https://github.com/mostly-ai/mostlyai"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"
httpx = ">=0.25.0,<0.28.0"  # frozen until https://github.com/lundberg/respx/issues/277 is resolved
pandas = ">=1.5.3,<2.0.0 || ^2.0.0"
pyarrow = ">=14.0.0"
rich = ">=13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pre-commit = "^2.17.0"
datamodel-code-generator = { version = "^0.26.3", extras = ["http"] }
vcrpy = "^5.1.0"
ruff = "0.4.4"
respx = "^0.20.2"
twine = "^5.0.0"
poetry-bumpversion = "^0.3.2"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5.3"
mkdocstrings = { version = "^0.27.0", extras = ["crystal", "python"] }
mkdocs-material = "^9.0.0"
griffe = "^1.0.0"
pymdown-extensions = "^10.0.0"
griffe-fieldz = "^0.2.0"

[[tool.poetry_bumpversion.replacements]]
files = ["mostlyai/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
